<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Tehran BRT</string>

    <!-- Strings used in AboutActivity class -->
    <string name="app_description">This app displays all the routes and stations of Tehran\'s BRT buses.</string>
    <string name="app_developer">Developer</string>
    <string name="app_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>
    <string name="app_github_page">Source Code</string>
    <string name="app_github_address" translatable="false">https://github.com/MasoodFallahpoor/TehranBrt</string>
    <string name="used_libraries">Used Libraries</string>
    <string name="library_localization_activity" translatable="false">
        <a href="https://github.com/akexorcist/Android-LocalizationActivity">LocalizationActivity</a>
    </string>
    <string name="library_alert_dialog_pro" translatable="false">
        <a href="https://github.com/fengdai/AlertDialogPro">AlertDialogPro</a>
    </string>
    <string name="library_acra" translatable="false">
        <a href="https://github.com/ACRA/acra">ACRA</a>
    </string>
    <string name="library_calligraphy" translatable="false">
        <a href="https://github.com/chrisjenx/Calligraphy">Calligraphy</a>
    </string>
    <string name="library_ck_change_log" translatable="false">
        <a href="https://github.com/cketti/ckChangeLog">ckChangeLog</a>
    </string>
    <string name="used_font">Used Font</string>
    <string name="shabnam">
        <a href="https://github.com/rastikerdar/shabnam-font">Shabnam</a>
    </string>
    <string name="masood_fallahpoor">Masood Fallahpoor</string>
    <string name="reference">The information of routes and stations are obtained from the following website</string>
    <string name="reference_web_site" translatable="false">http://bus.tehran.ir</string>

    <!-- Activity titles -->
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_map">Stations on Map</string>

    <string name="select_language">Select Language</string>

    <!-- Navigation drawer strings -->
    <string name="map">Stations on Map</string>
    <string name="settings">Settings</string>
    <string name="latest_changes">Latest Changes</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ckChangelog library strings -->
    <string name="changelog_full_title">Latest Changes</string>
    <string name="changelog_ok_button">OK</string>

    <!-- ACRA library strings -->
    <string name="crash_toast_text">Tehran BRT has encountered a problem</string>
    <string name="crash_dialog_text">Tehran BRT has encountered a problem. Would you like to send a report about the problem to developer of the app?</string>
    <string name="crash_dialog_positive_button_text">Yes</string>
    <string name="crash_dialog_negative_button_text">No</string>

    <!-- Help dialog strings -->
    <string name="action_help">Help</string>
    <string name="help">Help</string>
    <string name="help_text">
        - A station with a solid square beside its name is a two-way station.\n- A station with a decorated square beside its name is a one-way station.\n- A station that is near a metro station is marked with the logo of metro.
    </string>
    <string name="ok">OK</string>
    <string name="dialog_message_maps_activity">
        - A one-way station is marked with a pure white marker.
    </string>
</resources>
