<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@mipmap/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_latest_changes"
            android:icon="@mipmap/ic_latest_changes"
            android:title="@string/latest_changes" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_exit"
            android:title="@string/exit" />
    </group>

</menu>
